--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,7 +14,9 @@
     "prismjs": "^1.29.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-simple-code-editor": "^0.14.1"
+    "react-markdown": "^9.0.3",
+    "react-simple-code-editor": "^0.14.1",
+    "rehype-highlight": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
